Changelog 0.3.26 [20230217]:
- Add Zoro Sub sources

Changelog 0.3.25 [20230214]:
- Fixed sub and dub skin bug

Changelog 0.3.24 [20230213]:
- Fixed a few small bugs

Changelog 0.3.23 [20230212]:
- Added Special Setting "Filter Subs and Dubs"

Changelog 0.3.22 [20230211]:
- Use InfoTagVideo for Kodi 20+

Changelog 0.3.21 [20230209]:
- Added New Setting "Enable Automatic Subtitles for Dub Streams"

Changelog 0.3.20 [20230208]:
- Made dumb mistake with Next Up

Changelog 0.3.19 [20230208]:
- Subtitles turn on automatically for subs and off for dubs

Changelog 0.3.18 [20230208]:
- Fixed a small bug that is hardcoded

Changelog 0.3.17 [20230207]:
- Added New Setting "Show Changelog every update" 

Changelog 0.3.16 [20230207]:
- Fixed Preferred Audio Stream for torrents

Changelog 0.3.15 [20230206]:
- Brought back "Separate Subs and Dubs" 

Changelog 0.3.14 [20230204]:
- Improved the changelog with a news section

Changelog 0.3.13 [20230204]:
-  Clear cache, torrent cache and display changelog when addon is updated

Changelog 0.3.12 [20230204]:
- Fix lang error

Changelog 0.3.11 [20230204]:
- Fix source select not showing anime titles

Changelog 0.3.10 [20230202]:
- Added New Setting "Timeout for finding sources" for General Playback

Changelog 0.3.9 [20230202]:
- Added New Setting "Preferred Source" for Preferences
- Added New Setting "Set Delay in Seconds Before Showing Dialog" for Skip Intro Dialog
- Removed "Seperate Subs and Dubs" 
- Removed "Set content types"
- Removed "Hide Dub/Sub"
- Removed "Season Correction" 
- Removed "Find Similar" 

Changelog 0.3.8 [20230130]:
- Added animix search fallback
- Handle error when anilist title is null

Changelog 0.3.7 [20230128]:
- Record season number for the episodes

Changelog 0.3.6 [20230126]:
- Added Set Country Of Origin

Changelog 0.3.5 [20230126]:
- Fixed Hide Sub Sources Setting

Changelog 0.3.4 [20230126]:
- Added Hide Sub Sources Option
- Add Zoro dub sources

Changelog 0.3.3 [20230125]: