@@ -138,7 +138,7 @@
 		<setting id="anilist.token" type="text" subsetting="true" label="40351" default="" enable="false" visible="eq(-2,true)" />
 		<setting id="anilist.login" type="action" subsetting="true" label="40352" option="close" action="RunPlugin(plugin://plugin.video.otaku/watchlist_login/anilist?auth_dialog=true)" visible="eq(-3,true)"/>
 		<setting id="anilist.listsettings" type="action" label="40353" option="close" visible="eq(-4,true)"/>
-		<setting id="anilist.sort" type="labelenum" subsetting="true" label="40354" values="Romaji Title|English Title|Score|Progress|Last Updated|Last Added" default="Progress" visible="eq(-5,true)"/>
+		<setting id="anilist.sort" type="labelenum" subsetting="true" label="40354" values="Romaji Title|English Title|Score|Progress|Last Updated|Last Added" default="Last Updated" visible="eq(-5,true)"/>
 
 		<!-- Kitsu -->
 		<setting type="lsep" label="40355"/>
@@ -149,7 +149,7 @@
     	<setting id="kitsu.password" type="text" subsetting="true" option="hidden" label="40358" default="" visible="eq(-3,true)"/>
 		<setting id="kitsu.login" type="action" subsetting="true" label="40359" option="close" action="RunPlugin(plugin://plugin.video.otaku/watchlist_login/kitsu)" visible="eq(-4,true)"/>
 		<setting id="kitsu.listsettings" type="action" label="40353" option="close" visible="eq(-5,true)"/>
-		<setting id="kitsu.sort" type="labelenum" subsetting="true" label="40354" values="Date Updated|Progress|Title" default="Title" visible="eq(-6,true)"/>
+		<setting id="kitsu.sort" type="labelenum" subsetting="true" label="40354" values="Date Updated|Progress|Title" default="Date Updated" visible="eq(-6,true)"/>
 		<setting id="kitsu.titles" type="labelenum" subsetting="true" label="40360" values="Canonical|Romanized|English" default="Canonical" visible="eq(-7,true)"/>
 
 		<!-- MyAnimeList -->
@@ -159,7 +159,7 @@
     	<setting id="mal.username" type="text" subsetting="true" label="40350" default="" enable="false" visible="eq(-1,true)"/>
 		<setting id="mal.login" type="action" subsetting="true" label="40352" option="close" action="RunPlugin(plugin://plugin.video.otaku/watchlist_login/mal?auth_dialog=true)" visible="eq(-2,true)"/>
 		<setting id="mal.listsettings" type="action" label="40353" option="close" visible="eq(-3,true)"/>
-		<setting id="mal.sort" type="labelenum" subsetting="true" label="40354" values="List Score|Last Updated|Anime Start Date|Anime Title" default="Anime Title" visible="eq(-4,true)"/>
+		<setting id="mal.sort" type="labelenum" subsetting="true" label="40354" values="List Score|Last Updated|Anime Start Date|Anime Title" default="Last Updated" visible="eq(-4,true)"/>
 		<setting id="mal.userid" type="text"  default="" visible="false"/>
 		<setting id="mal.authvar" type="text"  default="" visible="false"/>
 		<setting id="mal.token" type="text"  default="" visible="false"/>
