@@ -1,3 +1,6 @@
+Changelog 0.3.27 [20230218]:
+- Changed a few default settings
+
 Changelog 0.3.26 [20230217]:
 - Add Zoro Sub sources
 
